--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <div class="result" id="resultText"></div>
 
-  <div class="footer-quote" onclick="showPopup()">Sorry Lusi Sob kichur Jonno..<br>Please Khoma Kore daoo😔</div>
+  <div class="footer-quote" onclick="showPopup()">Sorry Lusi Sob kichur Jonno..<br>Please Khoma Kore daoo😔*touch me</div>
 
   <div id="question" class="question-popup">
     <p>Khoma korecho?</p>
@@ -107,7 +107,7 @@
 
     function handleAnswer(answer) {
       if (answer === 'yes') {
-        alert("Tui amar jibon, ami bhalobashi tomake shotti ❤️");
+        alert("Thanks a lot...onk onk Dhonyobaad 😘🥰, Lusi I ❤love You");
       } else {
         showPopup();
       }
